fixed flow hero title size on mobile

--- a/src/components/flow/FlowHero/styles.module.scss
+++ b/src/components/flow/FlowHero/styles.module.scss
@@ -109,6 +109,13 @@
     font: $font_32_bold;
     max-height: 3.6em;
   }
+
+  @include phone {
+    white-space: initial;
+    word-wrap: break-word;
+    font: $font_24_bold;
+    max-height: 3.6em;
+  }
 }
 
 .buttons {
